# ppo-mujoco

./: .gitignore  .pre-commit-config.yaml  enjoy.py  evaluation.py  flake.nix  main.py  pyproject.toml  requirements.txt  setup.py  test_miniworld.py  train.py  visualize.ipynb
algo/: arguments.py  distributions.py  envs.py  model.py  ppo.py  utils.py
configs/: base.yml  config.yml  half-cheetah.yml  miniworld.yml
envs/: __init__.py
envs/mujoco/: __init__.py  half_cheetah.py  hopper.py  humanoid.py  humanoidstandup.py  inverted_double_pendulum.py  inverted_pendulum.py  mujoco_env.py  pusher.py  reacher.py  striker.py  thrower.py  walker2d.py
logs/: 0.monitor.csv
logs/videos/: vecenv.video.424840.video000000.meta.json
src/: evaluation.py  main.py  train.py
src/algo/: agent.py  distributions.py  envs.py  model.py  networks.py  ppo.py  storage.py  utils.py
src/envs/: __init__.py  base.py  envs.py  monitor.py  subproc_vec_env.py  vec_normalize.py
src/envs/mujoco/: ant.py  half_cheetah.py  inverted_pendulum.py  mujoco_env.py  striker.py
trained_models/: HalfCheetah-v2.pt
