[tool.poetry]
name = "adpp"
version = "0.1.0"
description = ""
authors = ["Ethan Brooks <ethanabrooks@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "1.13.1"
gym = "^0.17.2"
matplotlib = "^3.7.1"
mujoco-py = "^2.0.2.10"
torchrl = "^0.0.5"
tensordict = "^0.1.0"
torchsnapshot = "^0.1.0"
wandb = "^0.14.1"
ray = { version = "^2.3.1", extras = ["tune"] }
mujoco = "^2.3.5"
gitpython = "^3.1.31"
rich = "^13.4.2"
tqdm = "^4.66.1"
dollar-lambda = "^1.1.4"
omegaconf = "^2.3.0"
pandas = "^2.1.0"
braceexpand = "^0.1.7"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
ipdb = "^0.13.9"
ipython = "^8.4.0"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.vulture]
ignore_decorators = ["@tree.command", "@tree.subcommand"]
ignore_names = ['daemon']
paths = ["src"]
