[tool.poetry]
name = "PPO"
version = "0.1.0"
description = ""
authors = ["Ethan Brooks <ethanabrooks@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
miniworld = "^2.0.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.vulture]
ignore_decorators = ["@tree.command", "@tree.subcommand"]
ignore_names = ['daemon']
paths = ["."]
